--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="Bridget Bidigare is a front-end web developer based in Chicago, IL" />
     <title>Portfolio | Bridget Bidigare</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
       class="navbar navbar-expand-lg navbar-light sticky-top navbar-background"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"
+        <a class="navbar-brand" href="/" title="Bridget Bidigare"
           ><img src="/media/BB.png" width="80px"
         /></a>
         <button
@@ -66,17 +66,17 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/pages/about.html">About me</a>
-            <a class="nav-link" href="/pages/projects.html">My projects</a>
-            <a class="nav-link" href="/pages/contact.html">Contact me</a>
+            <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+            <a class="nav-link" href="/pages/about.html" title="About me">About me</a>
+            <a class="nav-link" href="/pages/projects.html" title="My projects">My projects</a>
+            <a class="nav-link" href="/pages/contact.html" title="Contact me">Contact me</a>
           </div>
         </div>
       </div>
     </nav>
     <div class="homepage-hero">
       <h3>hello, i'm</h3>
-      <img src="/media/name.png" class="name-image" />
+      <img src="/media/name.png" class="name-image" alt="Bridget Bidigare" />
       <h2>Front-end developer living in Chicago, IL</h2>
     </div>
     <a href="/pages/about.html" title="About me" class="home-links"
