--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="Bridget Bidigare is a front-end web developer based in Chicago, IL" />
     <title>About me | Bridget Bidigare</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
       class="navbar navbar-expand-lg navbar-light sticky-top navbar-background"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="/media/BB.png" width="80px"
+        <a class="navbar-brand" href="/" title="Bridget Bidigare"><img src="/media/BB.png" width="80px"
         /></a>
         <button
           class="navbar-toggler"
@@ -65,15 +65,15 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link active" href="/pages/about.html">About me</a>
-            <a class="nav-link" href="/pages/projects.html">My projects</a>
-            <a class="nav-link" href="/pages/contact.html">Contact me</a>
+            <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
+            <a class="nav-link active" href="/pages/about.html" title="About me">About me</a>
+            <a class="nav-link" href="/pages/projects.html" title="My projects">My projects</a>
+            <a class="nav-link" href="/pages/contact.html" title="Contact me">Contact me</a>
           </div>
         </div>
       </div>
     </nav>
-    <img src="/media/aboutme.png" class="about-image" />
+    <img src="/media/aboutme.png" class="about-image" alt="About me" />
     <div class="container about-me-container">
       <div class="row">
         <p class="col-md-8 about-section">
@@ -86,9 +86,9 @@
           target="_blank"
           ><img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/095/original/she-codes.png?1639853149"
-          width="30px" /></a>
+          width="30px" alt="SheCodes" /></a>
           <br />
-          <a href="/pages/contact.html">Reach out to me!</a>
+          <a href="/pages/contact.html" title="Contact me">Reach out to me!</a>
         </p>
         <img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/056/original/DSC_0237_%281%29.jpeg?1639801286"
@@ -104,9 +104,9 @@
       <i class="fab fa-bootstrap"></i> <i class="fab fa-google"></i>
     </span>
     <div>
-    <h3 class="mt-5 mb-4"><i>Certficates:</i></h3>
-    <img src="/media/basicscert.png" class="certs" />
-    <img src="/media/pluscert.png" class="certs" />
+      <h3 class="mt-5 mb-4"><i>Certficates:</i></h3>
+      <img src="/media/basicscert.png" class="certs" alt="SheCodes Basics Certificate"/>
+      <img src="/media/pluscert.png" class="certs" alt="SheCodes Plus Certificate/>
     </div>
     <div>
     <a href="/" title="Homepage" class="links">Home</a>
