--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <title>My projects | Bridget Bidigare</title>
+    <meta
+      name="description"
+      content="Bridget Bidigare is a front-end web developer based in Chicago, IL"
+    />
+    <title>Contact me | Bridget Bidigare</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,7 +50,7 @@
       class="navbar navbar-expand-lg navbar-light sticky-top navbar-background"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"
+        <a class="navbar-brand" href="/" title="Bridget Bidigare"
           ><img src="/media/BB.png" width="80px"
         /></a>
         <button
@@ -66,15 +69,26 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/pages/about.html">About me</a>
-            <a class="nav-link" href="/pages/projects.html">My projects</a>
-            <a class="nav-link active" href="/pages/contact.html">Contact me</a>
+            <a class="nav-link" aria-current="page" href="/" title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link" href="/pages/about.html" title="About me"
+              >About me</a
+            >
+            <a class="nav-link" href="/pages/projects.html" title="My projects"
+              >My projects</a
+            >
+            <a
+              class="nav-link active"
+              href="/pages/contact.html"
+              title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
     </nav>
-    <img src="/media/contactme.png" class="contact-image" />
+    <img src="/media/contactme.png" class="contact-image" alt="Contact me" />
     <br />
     <h1 class="mt-5 mb-3">Reach out to me!</h1>
     <h4>
@@ -83,15 +97,24 @@
     </h4>
     <div class="contact-section">
       <h3>Email</h3>
-      <a href="mailto:bridgetbidigare@gmail.com" target="_blank"
+      <a
+        href="mailto:bridgetbidigare@gmail.com"
+        target="_blank"
+        title="bridgetbidigare@gmail.com"
         >bridgetbidigare@gmail.com</a
       >
       <h3>LinkedIn</h3>
-      <a href="https://www.linkedin.com/in/bridget-bidigare/" target="_blank"
+      <a
+        href="https://www.linkedin.com/in/bridget-bidigare/"
+        target="_blank"
+        title="LinkedIn"
         >@bridget-bidigare</a
       >
       <h3>Instagram</h3>
-      <a href="https://www.instagram.com/brridgetlee" target="_blank"
+      <a
+        href="https://www.instagram.com/brridgetlee"
+        target="_blank"
+        title="Instagram"
         >@brridgetlee</a
       >
     </div>
