--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Bridget Bidigare is a front-end web developer based in Chicago, IL"
+    />
     <title>My projects | Bridget Bidigare</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -47,7 +50,7 @@
       class="navbar navbar-expand-lg navbar-light sticky-top navbar-background"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"
+        <a class="navbar-brand" href="/" title="Bridget Bidigare"
           ><img src="/media/BB.png" width="80px"
         /></a>
         <button
@@ -66,27 +69,41 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/pages/about.html">About me</a>
-            <a class="nav-link active" href="/pages/projects.html"
+            <a class="nav-link" aria-current="page" href="/" title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link" href="/pages/about.html" title="About me"
+              >About me</a
+            >
+            <a
+              class="nav-link active"
+              href="/pages/projects.html"
+              title="My projects"
               >My projects</a
             >
-            <a class="nav-link" href="/pages/contact.html">Contact me</a>
+            <a class="nav-link" href="/pages/contact.html" title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
     </nav>
-    <img src="/media/myprojects.png" class="projects-image" />
+    <img src="/media/myprojects.png" class="projects-image" alt="My projects" />
     <div class="container projects-container">
       <div class="row">
         <div class="col-lg-6">
-          <img src="/media/weather.png" class="app-image" />
+          <img
+            src="/media/weather.png"
+            class="app-image"
+            alt="My weather app"
+          />
         </div>
         <div class="col-lg-6">
           <p>
             <a
               href="https://eager-blackwell-c3befc.netlify.app/"
               target="_blank"
+              title="My weather app"
               ><h3>My weather app →</h3></a
             >The goal for this project was to create a weather app that could
             tell you the current weather (in fahrenheit or celsius) in any city,
@@ -114,20 +131,28 @@
     <div class="container projects-container">
       <div class="row">
         <div class="col-lg-6">
-          <img src="/media/astro.png" class="app-image" />
+          <img
+            src="/media/astro.png"
+            class="app-image"
+            alt="My astrology website"
+          />
         </div>
         <div class="col-lg-6">
           <p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-80a0fb30-bd5c-4646-805d-483b9deb22a8/projects/480607"
               target="_blank"
+              title="My astrology website"
               ><h3>My astrology website →</h3></a
             >This was the first website I ever made! My goal was to make a
             simple, yet informative website on astrology. My favorite part is
             the button on the bottom of the page that tells you what your sign
             is.
             <br />
-            <a href="https://www.instagram.com/p/CUsO5CTgXTF/" target="_blank"
+            <a
+              href="https://www.instagram.com/p/CUsO5CTgXTF/"
+              target="_blank"
+              title="SheCodes Instagram"
               >Check out this project on SheCodes's instagram!</a
             >
             <br />
